--- a/notebooks/train_colab.ipynb
+++ b/notebooks/train_colab.ipynb
@@ -966,7 +966,7 @@
     "\n",
     "    moves = []\n",
     "    while not game.is_terminal() and game.move_count < 100:\n",
-    "        action, _ = mcts.get_action(game, temperature=0.1)\n",
+    "        action, _, _ = mcts.get_action(game, temperature=0.1)\n",
     "        if action < 0:\n",
     "            break\n",
     "        move = game.move_encoder.decode(action)\n",
@@ -1000,7 +1000,7 @@
     "for _ in range(20):\n",
     "    if game.is_terminal():\n",
     "        break\n",
-    "    action, _ = mcts.get_action(game, temperature=0.1)\n",
+    "    action, _, _ = mcts.get_action(game, temperature=0.1)\n",
     "    if action >= 0:\n",
     "        game.apply_move_index(action)\n",
     "\n",
