--- a/notebooks/train_full_pipeline.ipynb
+++ b/notebooks/train_full_pipeline.ipynb
@@ -255,7 +255,7 @@
     "            is_bot_turn = (game.turn == chess.WHITE) == bot_is_white\n",
     "            \n",
     "            if is_bot_turn:\n",
-    "                action, _ = mcts.get_action(game, temperature=0.1)\n",
+    "                action, _, _ = mcts.get_action(game, temperature=0.1)\n",
     "                if action >= 0:\n",
     "                    game.apply_move_index(action)\n",
     "            else:\n",
@@ -300,7 +300,7 @@
     "\n",
     "moves = []\n",
     "while not game.is_terminal() and game.move_count < 100:\n",
-    "    action, _ = mcts.get_action(game, temperature=0.1)\n",
+    "    action, _, _ = mcts.get_action(game, temperature=0.1)\n",
     "    if action < 0:\n",
     "        break\n",
     "    move = game.move_encoder.decode(action)\n",
